# ScreenCopyUtil

./: Cargo.toml  shell.nix
src/: main.rs  test.rs  types.rs  wayland.rs  wayland_app.rs  wayland_data.rs  wayland_fractional_scale.rs  wayland_screencopy.rs
src/wayland/: get_screencopy.rs  init.rs  types.rs
