[package]
name = "screen_capturer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay-client-toolkit = "0.18.1"
#iced = "0.12.1"
wayland-client = "0.31.2"
wayland-protocols = "0.31.2"
wayland-protocols-wlr = { version =  "0.2.0", features = ["client"]}
image = "0.25.0"
tempfile = "3.10.1"
memmap = "0.7.0"
dirs = "5.0.1"
